I wrote multiple lines to a file.